--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>CV en ligne</title>
     <meta name="description" content="CV en ligne développeur web junior.">
+    <link rel="icon" type="image/png" href="./image/cv.png">
 </head>
 
 <body>
