add hover stylesheet

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <meta name="description" content="CV en ligne développeur web junior.">
     <link rel="icon" type="image/png" href="./image/cv.png">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/hover.css">
 </head>
 
 <body>
     <header>
-            <img src="./assets/image/avatar.png" alt="image de profil avatar">
+            <a href="./assets/image/avatar.png" target="_blank"><img src="./assets/image/avatar.png" alt="image de profil avatar"></a>
             <h1>Julien Chauvin</h1>
             <h2>développeur web junior</h2>
     </header>
@@ -21,7 +22,7 @@
     <main>
         <address>
             <a href="https://www.google.fr/maps/place/20+Rue+de+la+Paix,+75002+Paris/@48.8696855,2.3293847,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66e30fb033795:0x43a3359f4f794cb0!8m2!3d48.869682!4d2.3319596!16s%2Fg%2F11cskhs2g0?hl=fr&entry=ttu" target="_blank">20 rue de la paix <br>75002 Paris</a><br>
-            <a href="adresse@gmail.com" target="_blank">adresse@gmail.com</a><br>
+            <a href="mailto:adresse@gmail.com" target="_blank">adresse@gmail.com</a><br>
             <a href="tel:0606060606" target="_blank">0606060606</a>
         </address>
 
@@ -118,11 +119,11 @@
             <div>
             <h2>Diplômes/Formations</h2>
                 <h3>Formation au Titre Professionnel DWWM</h3>
-                        <span>En cours</span>
+                        <span>En cours</span><br>
                         <span>Centre européen de formation</span>
             
                 <h3>DAEU option B</h3>
-                        <span>Du 01/09/2015 au 31/06/2016</span>
+                        <span>Du 01/09/2015 au 31/06/2016</span><br>
                         <span>L’université de Versailles – Saint-Quentin-en-Yvelines UVSQ</span>
             </div>
 
