--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>CV en ligne</title>
     <meta name="description" content="CV en ligne développeur web junior.">
     <link rel="icon" type="image/png" href="./image/cv.png">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/hover.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/hover.css">
 </head>
 
 <body>
